<resources>
    <string name="app_name">MathQ</string>
    <string name="action_settings">Settings</string>
    <string name="start_game">Start Game</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timer">00:00:000</string>
    <string name="startTimer">Start</string>
    <string name="stopTimer">Stop</string>
    <string name="title_activity_year_selection">YearSelection</string>
    <string name="y1">Year 1</string>
    <string name="y2">Year 2</string>
    <string name="y3">Year 3</string>
    <string name="y4">Year 4</string>
    <string name="y5">Year 5</string>
    <string name="y6">Year 6</string>
    <string name="title_activity_level_selection">LevelSelection</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="title_activity_main_page_loading">MainPageLoading</string>
    <string name="playagain">Play Again</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="image">Profile Image</string>
    <string name="confirm">Confirm</string>

    <string name="pooh">Pooh</string>
    <string name="cute_girl">Cute Girl</string>
    <string name="elephant">Elephant</string>
    <string name="blue">Blue</string>

    <string name="userName">User Name</string>
    <string name="profile_image">Profile Image</string>


    <string name="History">History</string>
    <string name="Level">Level</string>
    <string name="wait">Please wait while we download neccesary resources...</string>


</resources>
