<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mathback2"
    tools:context="com.example.priya.mathq.YearSelection">

    <Button
        android:id="@+id/y1"
        android:layout_width="157dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="156dp"
        android:background="#B3E5FC"
        android:fontFamily="casual"
        android:text="Year 1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/y1" />

    <Button
        android:id="@+id/y4"
        android:layout_width="157dp"
        android:layout_height="74dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="156dp"
        android:background="#FFCCBC"
        android:fontFamily="casual"
        android:text="Year 4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toEndOf="@+id/y1"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/y4" />

    <Button
        android:id="@+id/y2"
        android:layout_width="157dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#B2EBF2"
        android:fontFamily="casual"
        android:text="Year 2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/y1"
        tools:text="@string/y2" />

    <Button
        android:id="@+id/y5"
        android:layout_width="157dp"
        android:layout_height="74dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="#FFE0B2"
        android:fontFamily="casual"
        android:text="Year 5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toEndOf="@+id/y2"
        app:layout_constraintTop_toBottomOf="@+id/y4"
        tools:text="@string/y5" />

    <Button
        android:id="@+id/y3"
        android:layout_width="157dp"
        android:layout_height="74dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="#C5CAE9"
        android:fontFamily="casual"
        android:text="Year 3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/y2"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/y3" />

    <Button
        android:id="@+id/y6"
        android:layout_width="157dp"
        android:layout_height="74dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="#FFCDD2"
        android:fontFamily="casual"
        android:text="Year 6"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toEndOf="@+id/y3"
        app:layout_constraintTop_toBottomOf="@+id/y5"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/y6" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <include
        layout="@layout/app_bar_navigation_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</android.support.constraint.ConstraintLayout>
